@@ -42,23 +42,38 @@ public class CodiService {
                 .collect(Collectors.toList());
     }
 
-    public List<CodiProductDTO> getAllCoordiWithProducts() {
-        List<Object[]> results = codiRepository.findLast40CoordiWithProductsNative();
+//    public List<CodiProductDTO> getAllCoordiWithProducts() {
+//        List<Object[]> results = codiRepository.findLast40CoordiWithProductsNative();
+//
+//        return results.stream()
+//                .map(row -> {
+//                    Long codiId = ((Number) row[0]).longValue();
+//                    List<Product> products = productRepository.findByCodi_CodiId(codiId);
+//                    return new CodiProductDTO(
+//                            codiId,
+//                            (String) row[1],  // codiName
+//                            (String) row[2],  // codiThumbnail
+//                            (Integer) row[3], // codiPrice
+//                            products          // 연관된 상품 리스트
+//                    );
+//                })
+//                .toList();
+//    }
 
-        return results.stream()
-                .map(row -> {
-                    Long codiId = ((Number) row[0]).longValue();
-                    List<Product> products = productRepository.findByCodi_CodiId(codiId);
-                    return new CodiProductDTO(
-                            codiId,
-                            (String) row[1],  // codiName
-                            (String) row[2],  // codiThumbnail
-                            (Integer) row[3], // codiPrice
-                            products          // 연관된 상품 리스트
-                    );
-                })
-                .toList();
+    public List<CodiProductDTO> getAllCoordiWithProducts() {
+        List<Codi> codis = codiRepository.findAllCodisWithProducts();
+
+        return codis.stream()
+            .map(codi -> new CodiProductDTO(
+                codi.getCodiId(),
+                codi.getCodiName(),
+                codi.getCodiThumbnail(),
+                codi.getCodiPrice(),
+                codi.getProducts()  // fetch join 덕분에 이미 로딩됨
+            ))
+            .collect(Collectors.toList());
     }
+
 
      // 특정 코디 ID에 속하는 상품 조회
     public List<Product> getProductsByCodiId(Long codiId) {
